Fix `.close img` looking off-center.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2804,6 +2804,9 @@ a.toggle_selector
     :top -9px
     :right -5px
 
+    img
+      margin-top: 10px
+
   &:hover
     .close
       @include opacity(0.5)
